@@ -1,3 +1,8 @@
+1999-07-23  Rosanna Yuen  <rwsy@mit.edu>
+
+	* kansas.scm (empty-tableau?): makes sure that no cards can be
+	moved down before game is officially over.
+
 1999-07-23  Robert Brady <rwb197@ecs.soton.ac.uk>
 
 	* events.c: Fixed bug #1192 (dragging a card to the toolbar and
